--- a/distribution/docker/pom.xml
+++ b/distribution/docker/pom.xml
@@ -230,35 +230,49 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>com.google.code.maven-replacer-plugin</groupId>
-                <artifactId>replacer</artifactId>
-                <version>${maven.replacer.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>replace-versions</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>replace</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <includes>
-                        <include>${basedir}/README.md</include>
-                        <include>${basedir}/ballerina-base-image/README.md</include>
-                        <include>${basedir}/ballerina-base-image/build.sh</include>
-                    </includes>
-                    <replacements>
-                        <replacement>
-                            <token>[0-9]+\.[0-9]+\.[0-9]+-SNAPSHOT|[0-9]+\.[0-9]+\.[0-9]+</token>
-                            <value>\${project.version}</value>
-                        </replacement>
-                    </replacements>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>wso2-release</id>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>com.google.code.maven-replacer-plugin</groupId>
+                            <artifactId>replacer</artifactId>
+                            <version>${maven.replacer.plugin.version}</version>
+                            <configuration>
+                                <includes>
+                                    <include>${basedir}/README.md</include>
+                                    <include>${basedir}/ballerina-base-image/README.md</include>
+                                    <include>${basedir}/ballerina-base-image/build.sh</include>
+                                </includes>
+                                <replacements>
+                                    <replacement>
+                                        <token>[0-9]+\.[0-9]+\.[0-9]+-SNAPSHOT|[0-9]+\.[0-9]+\.[0-9]+</token>
+                                        <value>\${project.version}</value>
+                                    </replacement>
+                                </replacements>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <artifactId>maven-scm-plugin</artifactId>
+                            <configuration>
+                                <message>[maven-scm-plugin] update version of docker dist to ${project.version}.</message>
+                                <includes>
+                                    README.md,
+                                    ballerina-base-image/README.md,
+                                    ballerina-base-image/build.sh
+                                </includes>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+    </profiles>
 
     <properties>
         <maven.findbugsplugin.version.exclude>findbugs-exclude.xml</maven.findbugsplugin.version.exclude>
